# Shortwave

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml_disabled  Cargo.toml  README.md  Shortwave.doap  TODO.md  code-of-conduct.md  de.haeckerfelix.ShortwaveDevel.json  meson.build  meson_options.txt  shortwave.doap
.github/workflows/: flatpak.yml
build-aux/: cargo.sh  de.haeckerfelix.Shortwave.Beta.json  de.haeckerfelix.Shortwave.Devel.json  de.haeckerfelix.Shortwave.json  pre-commit.hook
build-aux/meson/: postinstall.py
data/: de.haeckerfelix.Shortwave.appdata.xml.in  de.haeckerfelix.Shortwave.appdata.xml.in.in  de.haeckerfelix.Shortwave.desktop.in.in  de.haeckerfelix.Shortwave.gresource.xml  de.haeckerfelix.Shortwave.gschema.xml  de.haeckerfelix.Shortwave.metainfo.xml.in.in  meson.build  resources.xml
data/database/: README.md
data/database/migrations/2019-07-28-193715_init/: down.sql  up.sql
data/database/migrations/2020-01-18-182947_station_uuid/: down.sql  up.sql
data/database/migrations/2021-05-07-232620_station_data/: down.sql  up.sql
data/gtk/: discover-page.ui  discover.ui  discover_page.ui  featured-carousel.ui  featured_carousel.ui  featured_carousel_page.ui  gtk_controller.ui  help-overlay.ui  library.ui  library_page.ui  menu.ui  mini_controller.ui  notification.ui  player.ui  resultview_box.ui  search.ui  search_page.ui  settings_window.ui  shortcuts.ui  sidebar_controller.ui  simple_controller.ui  song_listbox.ui  song_row.ui  station-dialog.ui  station-row.ui  station_dialog.ui  station_favicon.ui  station_flowbox.ui  station_row.ui  storefront.ui  streaming-dialog.ui  streaming_dialog.ui  style-dark.css  style-hc.css  style.css  tag_button.ui  tags_button.ui  tile_button.ui  toolbar_controller.ui  window.ui
data/gtk/menu/: app_menu.ui  player-menu.ui  player_menu.ui
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  it.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po
scripts/: cargo.sh
src/: app.rs  config.rs.in  i18n.rs  library.rs  main.rs  meson.build  path.rs  utils.rs  window.rs
src/api/: client.rs  error.rs  favicon_downloader.rs  mod.rs  object.rs  station.rs  station_metadata.rs  station_request.rs  station_url.rs  stats.rs
src/audio/: gcast_discoverer.rs  gstreamer_backend.rs  mod.rs  player.rs  song.rs  song_backend.rs
src/audio/backend/: gstreamer_backend.rs  mod.rs  song_backend.rs  streaming_backend.rs
src/audio/controller/: gcast_controller.rs  gtk_controller.rs  inhibit_controller.rs  mini_controller.rs  mod.rs  mpris_controller.rs  sidebar_controller.rs  toolbar_controller.rs
src/database/: connection.rs  gradio_db.rs  library.rs  mod.rs  models.rs  queries.rs  schema.rs
src/discover/: mod.rs  search.rs  storefront.rs  tag_button.rs  tile_button.rs
src/discover/pages/: discover.rs  mod.rs  search.rs
src/model/: mod.rs  model_handler.rs  song_model.rs  station_model.rs  station_sorter.rs
src/settings/: key.rs  mod.rs  settings_manager.rs  settings_window.rs
src/ui/: about_dialog.rs  featured_carousel.rs  import_dialog.rs  mod.rs  notification.rs  song_listbox.rs  song_row.rs  station_dialog.rs  station_favicon.rs  station_flowbox.rs  station_row.rs  streaming_dialog.rs  window.rs
src/ui/pages/: discover_page.rs  library_page.rs  mod.rs  search_page.rs
src/widgets/: mod.rs  song_listbox.rs  song_row.rs  station_dialog.rs  station_flowbox.rs  station_row.rs
