[package]
name = "shortwave"
version = "0.0.0"
authors = ["Felix Häcker <haeckerfelix@gnome.org>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
chrono = "0.4"
rust_cast = "0.15"
mdns = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.6"
lazy_static = "1.4"
matches = "0.1"
open = "1.4"
url = "2.1"
indexmap = "1.4"
strum = "0.19"
strum_macros = "0.19"
diesel_migrations = "1.4"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
futures = "0.3"
futures-io = "0.3"
futures-util = "0.3"
async-std = "1.6"
isahc = {version = "0.9", features = ["json"]}
regex = "1.3"
thiserror = "1.0"

gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"] }
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gettext-rs = { version = "0.4.4", features = ["gettext-system"] }
gtk-macros = "0.2.0"

[target.'cfg(unix)'.dependencies]
mpris-player = "0.6"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs/"
features = ["v2_64"]

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gtk4"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk4-rs/"
package = "gdk4"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gtk-rs/"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs/"
features = ["v2_64"]

[dependencies.adw]
git = "https://gitlab.gnome.org/bilelmoussaoui/libadwaita-rs"
package = "libadwaita"
