[package]
name = "shortwave"
version = "0.0.0"
authors = ["Felix Häcker <haeckerfelix@gnome.org>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
chrono = "0.4.19"
rust_cast = "0.16.0"
mdns = "0.3.0"
serde = "1.0.123"
serde_json = "1.0.62"
serde_derive = "1.0.123"
serde_urlencoded = "0.7.0"
open = "1.4.0"
url = "2.2.0"
indexmap = "1.6.1"
strum = "0.20.0"
strum_macros = "0.20.1"
diesel_migrations = "1.4.0"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"] }
futures = "0.3.12"
futures-io = "0.3.12"
futures-util = "0.3.12"
async-std = "1.9.0"
isahc = { version = "1.1.0", features = ["json"] }
regex = "1.4.3"
thiserror = "1.0.23"
async-std-resolver = "0.20.0"
once_cell = "1.8.0"
rand = "0.8.3"
sanitize-filename = "0.3.0"

gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"], branch = "0.17" }
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.17"}
shumate = { git = "https://gitlab.gnome.org/World/Rust/libshumate-rs", package = "libshumate" }
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
adw = { version = "0.1.0-alpha", package = "libadwaita" }
gtk = { version = "0.3.0", package = "gtk4" }
gtk-macros = "0.3.0"

[target.'cfg(unix)'.dependencies]
mpris-player = "0.6.1"
